fix(feature flipping): route to app-settings + fixes in routes
